# src/Weaver.Docker.WebApi/Models/ComposeModel.cs
@@ -1,0 +1,9 @@
+using Weaver.Extensions;
+
+namespace Weaver.Docker.WebApi.Models;
+
+public record struct ComposeModel(
+    string Id,
+    string Name,
+    List<ContainerListItemModel> Containers
+);
