# src/Weaver.WebApp/packages/docker/src/api/models/index.ts
@@ -8,8 +8,10 @@
 export * from './bind-options';
 export * from './bind-options-propagation';
 export * from './cluster-options';
+export * from './compose-model';
 export * from './container-detail-model';
 export * from './container-list-item-model';
+export * from './container-list-item-model-compose-name';
 export * from './create-container-parameters';
 export * from './create-container-parameters-cmd';
 export * from './create-container-parameters-domainname';
